--- a/config.json
+++ b/config.json
@@ -10,8 +10,19 @@
     "user_info": "Build Bot <build.bot@example.org>"
   },
   "packages": {
+    "EnvConfig": {
+      "description": "Environment variables",
+      "version": "none",
+      "platform": "x86_64",
+      "url": "none",
+      "file_name": "none",
+      "install_cmd": "Set-EnvVar HOME \"$env:UserProfile\" User ; Set-EnvVar MSYS2_PATH_TYPE inherit User",
+      "uninstall_cmd": "none",
+      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar HOME isDir))"
+    },
     "JDK": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "Java Development Kit",
       "version": "1.8.0.201-1",
       "platform": "x86_64",
@@ -23,6 +34,7 @@
     },
     "Python3": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "Python",
       "version": "3.7.2",
       "platform": "x86_64",
@@ -74,10 +86,11 @@
       "file_name": "none",
       "install_cmd": "conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan",
       "uninstall_cmd": "none",
-      "test_cmd": "$e = 1 - ((conan remote list) -match '^bincrafters:').Length ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit (1 - ((conan remote list) -match '^bincrafters:').Length)"
     },
     "Perl": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "Perl",
       "version": "5.26.3.2603",
       "platform": "x86_64",
@@ -107,7 +120,7 @@
       "file_name": "none",
       "install_cmd": "ppm install XML-DOM",
       "uninstall_cmd": "ppm remove XML-DOM",
-      "test_cmd": "$e = [int]!($(ppm list --matching XML-DOM --csv --no-header) -ne $null) ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!((ppm list --matching XML-DOM --csv --no-header) -ne `$null))"
     },
     "PerlModule_Try_Tiny": {
       "depends_on": ["Perl"],
@@ -118,10 +131,11 @@
       "file_name": "none",
       "install_cmd": "ppm install Try-Tiny",
       "uninstall_cmd": "ppm remove Try-Tiny",
-      "test_cmd": "$e = [int]!($(ppm list --matching Try-Tiny --csv --no-header) -ne $null) ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!((ppm list --matching Try-Tiny --csv --no-header) -ne `$null))"
     },
     "Ninja": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "Ninja",
       "version": "1.9",
       "platform": "x86_64",
@@ -133,6 +147,7 @@
     },
     "Hg": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "Mercurial",
       "version": "4.8.2",
       "platform": "x86_64",
@@ -151,17 +166,18 @@
       "file_name": "none",
       "install_cmd": "Set-Content -Path '$env:USERPROFILE/mercurial.ini' -Value @\"`n[ui]`nusername = $user_info`nmerge = kdiff3`neditor = notepad`n`n[extensions]`nshelve =`nbugzilla =`ncolor =`ntransplant =`nmercurial_keyring =`npurge =`nhistedit =`nrebase =`nstrip =`n`n[patch]`neol = auto`n`n[tortoisehg]`ntabwidth = 4`nui.language = en`nautoresolve = False`n`n[auth]`nhgserver.prefix = bitbucket.org`nhgserver.username = $user_name`ndhgserver.schemes = https`n\"@",
       "uninstall_cmd": "none",
-      "test_cmd": "$e = [int]!(Test-Path ($env:USERPROFILE+'/mercurial.ini') -Type Leaf) ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!(Test-Path ('$env:USERPROFILE/mercurial.ini') -Type Leaf))"
     },
     "Git": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "Git",
       "version": "2.20.1",
       "platform": "x86_64",
       "url": "https://github.com/git-for-windows/git/releases/download/v2.20.1.windows.1/Git-2.20.1-64-bit.exe",
       "file_name": "from_url",
       "install_cmd": "Set-Content -Path '$env:Temp/git.ini' -Value @\"`n[Setup]`nLang=default`nDir=\"$install_dir\\Git\"`nGroup=Git`nNoIcons=0`nSetupType=default`nComponents=ext,ext\\shellhere,ext\\guihere,gitlfs,assoc,assoc_sh`nTasks=`nEditorOption=Nano`nCustomEditorPath=`nPathOption=Cmd`nSSHOption=OpenSSH`nCURLOption=WinSSL`nCRLFOption=CRLFAlways`nBashTerminalOption=ConHost`nPerformanceTweaksFSCache=Enabled`nUseCredentialManager=Enabled`nEnableSymlinks=Disabled`n\"@ ; & \"$file_path\" /LOADINF=\"$env:Temp/git.ini\" /SILENT",
-      "uninstall_cmd": "Remove-Item -Path ($env:Temp+'/git.ini') -Force 2>&1 | Out-Null ; & \"$install_dir\\Git\\unins000.exe\" /SILENT",
+      "uninstall_cmd": "Remove-Item -Path ('$env:Temp/git.ini') -Force 2>&1 | Out-Null ; & \"$install_dir\\Git\\unins000.exe\" /SILENT",
       "test_cmd": "where.exe git"
     },
     "GitConfig": {
@@ -173,11 +189,11 @@
       "file_name": "none",
       "install_cmd": "git config --global user.name \"$user_name\" ; git config --global user.email \"$user_info\"",
       "uninstall_cmd": "none",
-      "test_cmd": "$e = [int]!(Test-Path ($env:USERPROFILE+'/.gitconfig') -Type Leaf) ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!(Test-Path ('$env:USERPROFILE/.gitconfig') -Type Leaf))"
     },
     "CmdScripts": {
       "elevated": "true",
-      "depends_on": ["Git"],
+      "depends_on": ["EnvConfig", "Git"],
       "description": "CMD scripts",
       "version": "none",
       "platform": "x86_64",
@@ -185,11 +201,11 @@
       "file_name": "none",
       "install_cmd": "Set-EnvVar CMD_LIB \"$install_dir\\CmdScripts\\lib\" Machine ; git clone https://github.com/DmitrySokolov/cmd-scripts.git \"$install_dir\\CmdScripts\"",
       "uninstall_cmd": "Remove-EnvVar CMD_LIB ; Remove-Item -Path \"$install_dir\\CmdScripts\" -Recurse -Force",
-      "test_cmd": "$e = [int]!(Test-EnvVar CMD_LIB isDir) ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar CMD_LIB isDir))"
     },
     "BuildTools2017": {
       "elevated": "true",
-      "depends_on": ["CmdScripts"],
+      "depends_on": ["EnvConfig", "CmdScripts"],
       "description": "Build Tools for VS 2017",
       "version": "none",
       "platform": "x86_64",
@@ -215,10 +231,11 @@
       },
       "install_cmd": "& (Get-Package | ? Name -match '$($pkg.vars.name)' | ? Version -match '$version' ).Metadata['BundleCachePath'] /features OptionId.WindowsDesktopDebuggers /quiet /norestart /ceip off | Out-Default ; Set-EnvVar Path (Join-Path (Get-ItemPropertyValue '$($pkg.vars.reg_key)' -Name '$($pkg.vars.reg_prop)') '$($pkg.vars.arch)') Machine",
       "uninstall_cmd": "Remove-EnvVar Path (Join-Path (Get-ItemPropertyValue '$($pkg.vars.reg_key)' -Name '$($pkg.vars.reg_prop)') '$($pkg.vars.arch)') Machine ; & (Get-Package | ? Name -match '$($pkg.vars.name)' | ? Version -match '$version' ).Metadata['BundleCachePath'] /uninstall /quiet /norestart",
-      "test_cmd": "$e = [int]!((Get-Item \"$($pkg.vars.reg_key)\").Property -contains \"$($pkg.vars.reg_prop)\") ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!((Get-Item \"$($pkg.vars.reg_key)\").Property -contains \"$($pkg.vars.reg_prop)\"))"
     },
     "DirectXSDK": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "DirectX",
       "version": "9.29.1962",
       "platform": "x86_64",
@@ -230,10 +247,11 @@
       },
       "install_cmd": "& \"$file_path\" /P \"$($pkg.vars.dx_dir)\" /U | Out-Default ; Set-EnvVar DXSDK_DIR \"$($pkg.vars.dx_dir)\"",
       "uninstall_cmd": "Remove-EnvVar DXSDK_DIR ; & (Get-ItemPropertyValue '$($pkg.vars.dx_key)' -Name 'UninstallString') /U",
-      "test_cmd": "$e = [int]!(Test-EnvVar DXSDK_DIR isDir) ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar DXSDK_DIR isDir))"
     },
     "AndroidSDK": {
       "elevated": "true",
+      "depends_on": ["EnvConfig"],
       "description": "Android SDK",
       "version": "none",
       "platform": "x86_64",
@@ -244,7 +262,7 @@
       },
       "install_cmd": "if (!(Test-Path \"$install_dir\\$($pkg.vars.sdk_dir)\\tools\" -Type Container)) { Expand-Archive -Path \"$file_path\" -DestinationPath \"$install_dir\\$($pkg.vars.sdk_dir)\" } ; Write-Output yes | & \"$install_dir\\$($pkg.vars.sdk_dir)\\tools\\bin\\sdkmanager\" \"build-tools;28.0.3\" \"platform-tools\" \"platforms;android-28\" \"tools\" \"ndk-bundle\" --sdk_root=\"$install_dir\\$($pkg.vars.sdk_dir)\" | %{ if (`$_ -match '\\]\\s*(\\d+)%') {Write-Progress 'Installing Android SDK' -Status ('{0}% Complete:' -f `$Matches[1]) -PercentComplete `$Matches[1]} else {`$_} } -End{Write-Progress 'Installing Android SDK' -Completed}",
       "uninstall_cmd": "& \"$install_dir\\$($pkg.vars.sdk_dir)\\tools\\bin\\sdkmanager\" --uninstall \"build-tools;28.0.3\" \"platform-tools\" \"platforms;android-28\" \"ndk-bundle\" --sdk_root=\"$install_dir\\$($pkg.vars.sdk_dir)\" ; Remove-Item \"$install_dir\\$($pkg.vars.sdk_dir)\" -Recurse -Force",
-      "test_cmd": "$e = [int]!(Test-EnvVar ANDROID_SDK_ROOT isDir) ; cmd /c exit $e"
+      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar ANDROID_SDK_ROOT isDir))"
     },
     "AndroidSDKConfig": {
       "elevated": "true",
@@ -260,7 +278,7 @@
       },
       "install_cmd": "Set-EnvVar ANDROID_SDK_ROOT \"$install_dir\\$($pkg.vars.sdk_dir)\" ; Set-EnvVar ANDROID_NDK_ROOT \"$install_dir\\$($pkg.vars.ndk_dir)\" ; Set-EnvVar ANDROID_NDK_HOST \"windows-$platform\"",
       "uninstall_cmd": "Remove-EnvVar ANDROID_SDK_ROOT ; Remove-EnvVar ANDROID_NDK_ROOT ; Remove-EnvVar ANDROID_NDK_HOST",
-      "test_cmd": "none"
+      "test_cmd": "cmd /c exit ([int]!((Test-EnvVar ANDROID_SDK_ROOT isDir) -and (Test-EnvVar ANDROID_NDK_ROOT isDir) -and (Test-EnvVar ANDROID_NDK_HOST match '\\w+')))"
     }
   }
 }
