--- a/config.json
+++ b/config.json
@@ -1,300 +1,20 @@
 {
-  "main": {
-    "kits": {
-      "default": ["JDK", "Python3", "Conan", "Perl", "PerlModules", "Ninja", "Jom", "Hg", "Git", "CmdScripts", "BuildTools2017", "WinSDKComponents", "DirectXSDK", "AndroidSDK", "kit:config"],
-      "config": ["ConanConfig", "HgConfig", "GitConfig", "AndroidSDKConfig"]
-    },
+    "usage": [
+        "The following variables can be used:",
+        "  $script_dir    - the directory from wich the script was run",
+        "  $config_dir    - the directory where the config file is located",
+        "",
+        "A kit can be referenced as:",
+        "  kit:<name>",
+        "so this will add all packages contained in the referenced kit"
+    ],
     "install_dir": "C:\\Dev\\Tools",
-    "cache_dir": ".cache",
+    "packages_dir": "$config_dir\\packages",
+    "cache_dir": "$config_dir\\cache",
     "user_name": "build.bot",
-    "user_info": "Build Bot <build.bot@example.org>"
-  },
-  "packages": {
-    "EnvConfig": {
-      "description": "Environment variables",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "Set-EnvVar HOME \"$env:UserProfile\" User ; Set-EnvVar MSYS2_PATH_TYPE inherit User",
-      "uninstall_cmd": "none",
-      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar HOME isDir))"
-    },
-    "JDK": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Java Development Kit",
-      "version": "1.8.0.201-1",
-      "platform": "x86_64",
-      "url": "https://github.com/ojdkbuild/ojdkbuild/releases/download/1.8.0.201-1/java-1.8.0-openjdk-1.8.0.201-1.b09.ojdkbuild.windows.x86_64.msi",
-      "file_name": "from_url",
-      "install_cmd": "msiexec /i \"$file_path\" INSTALLDIR=\"$install_dir\\Java\" ADDLOCAL=jdk_env_path,jdk_env_java_home /qb",
-      "uninstall_cmd": "msiexec /x \"$file_path\" /qb",
-      "test_cmd": "where.exe javac"
-    },
-    "Python3": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Python",
-      "version": "3.7.2",
-      "platform": "x86_64",
-      "url": "https://www.python.org/ftp/python/3.7.2/python-3.7.2-amd64.exe",
-      "file_name": "from_url",
-      "install_cmd": "& \"$file_path\" /passive InstallAllUsers=1 TargetDir=\"$install_dir\\Python3\" PrependPath=1 CompileAll=1 Include_doc=0 Include_dev=0 Include_tcltk=0 Include_test=0 Include_launcher=1 InstallLauncherAllUsers=1",
-      "uninstall_cmd": "& \"$file_path\" /uninstall /quiet",
-      "test_cmd": "cmd /c \"where.exe py && (py -3 --version | findstr 3.7)\""
-    },
-    "Conan": {
-      "depends_on": ["Python3"],
-      "description": "Conan",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "py -3 -m pip install conan pip-autoremove",
-      "uninstall_cmd": "pip-autoremove conan -y",
-      "test_cmd": "where.exe conan"
-    },
-    "ConanConfig": {
-      "depends_on": ["ConanConfig_profile", "ConanConfig_remote"],
-      "description": "Conan config [meta package]",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "meta_pkg",
-      "uninstall_cmd": "Remove-Item \"$env:USERPROFILE\\.conan\" -Recurse -Force",
-      "test_cmd": "none"
-    },
-    "ConanConfig_profile": {
-      "depends_on": ["Conan"],
-      "description": "Conan config: profile",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "conan profile new default --detect",
-      "uninstall_cmd": "none",
-      "test_cmd": "conan profile get settings.os default"
-    },
-    "ConanConfig_remote": {
-      "depends_on": ["Conan"],
-      "description": "Conan config: remote",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan",
-      "uninstall_cmd": "none",
-      "test_cmd": "cmd /c exit (1 - ((conan remote list) -match '^bincrafters:').Length)"
-    },
-    "Perl": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Perl",
-      "version": "5.26.3.2603",
-      "platform": "x86_64",
-      "url": "https://downloads.activestate.com/ActivePerl/releases/5.26.3.2603/ActivePerl-5.26.3.2603-MSWin32-x64-a95bce075.exe",
-      "file_name": "from_url",
-      "install_cmd": "& \"$file_path\" /exebasicui /i // APPDIR=\"$install_dir\\Perl\" REMOVE=DOCUMENTATION,EXAMPLES PERL_EXT=No /qb",
-      "uninstall_cmd": "& \"$file_path\" /x // /q",
-      "test_cmd": "where.exe perl"
-    },
-    "PerlModules": {
-      "depends_on": ["PerlModule_XML_DOM", "PerlModule_Try_Tiny"],
-      "description": "Perl modules [meta package]",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "meta_pkg",
-      "uninstall_cmd": "meta_pkg",
-      "test_cmd": "none"
-    },
-    "PerlModule_XML_DOM": {
-      "depends_on": ["Perl"],
-      "description": "Perl module: XML-DOM",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "ppm install XML-DOM",
-      "uninstall_cmd": "ppm remove XML-DOM",
-      "test_cmd": "cmd /c exit ([int]!((ppm list --matching XML-DOM --csv --no-header) -ne `$null))"
-    },
-    "PerlModule_Try_Tiny": {
-      "depends_on": ["Perl"],
-      "description": "Perl module: Try-Tiny",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "ppm install Try-Tiny",
-      "uninstall_cmd": "ppm remove Try-Tiny",
-      "test_cmd": "cmd /c exit ([int]!((ppm list --matching Try-Tiny --csv --no-header) -ne `$null))"
-    },
-    "Ninja": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Ninja",
-      "version": "1.9",
-      "platform": "x86_64",
-      "url": "https://github.com/ninja-build/ninja/releases/download/v1.9.0/ninja-win.zip",
-      "file_name": "from_url",
-      "install_cmd": "Expand-Archive -Path \"$file_path\" -DestinationPath \"$install_dir\\Ninja\" ; Set-EnvVar Path \"$install_dir\\Ninja\" Machine",
-      "uninstall_cmd": "Remove-Item \"$install_dir\\Ninja\" -Recurse -Force ; Remove-EnvVar Path \"$install_dir\\Ninja\" Machine",
-      "test_cmd": "where.exe ninja"
-    },
-    "Jom": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Jom",
-      "version": "1.1.3",
-      "platform": "x86_64",
-      "url": "https://download.qt.io/official_releases/jom/jom.zip",
-      "file_name": "from_url",
-      "install_cmd": "Expand-Archive -Path \"$file_path\" -DestinationPath \"$install_dir\\Jom\" ; Set-EnvVar Path \"$install_dir\\Jom\" Machine",
-      "uninstall_cmd": "Remove-Item \"$install_dir\\Jom\" -Recurse -Force ; Remove-EnvVar Path \"$install_dir\\Jom\" Machine",
-      "test_cmd": "where.exe jom"
-    },
-    "Hg": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Mercurial",
-      "version": "4.8.2",
-      "platform": "x86_64",
-      "url": "https://bitbucket.org/tortoisehg/files/downloads/tortoisehg-4.8.2-x64.msi",
-      "file_name": "from_url",
-      "install_cmd": "msiexec /i \"$file_path\" INSTALLDIR=\"$install_dir\\TortoiseHg\" /qb",
-      "uninstall_cmd": "msiexec /x \"$file_path\" /qb",
-      "test_cmd": "where.exe hg"
-    },
-    "HgConfig": {
-      "depends_on": ["Hg"],
-      "description": "Mercurial config",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "Set-Content -Path '$env:USERPROFILE/mercurial.ini' -Value @\"`n[ui]`nusername = $user_info`nmerge = kdiff3`neditor = notepad`n`n[extensions]`nshelve =`nbugzilla =`ncolor =`ntransplant =`nmercurial_keyring =`npurge =`nhistedit =`nrebase =`nstrip =`neol =`n`n[patch]`neol = auto`n`n[tortoisehg]`ntabwidth = 4`nui.language = en`nautoresolve = False`n`n[auth]`nhgserver.prefix = mercurial.intellicad.org`nhgserver.username = $user_name`ndhgserver.schemes = https`n\"@",
-      "uninstall_cmd": "none",
-      "test_cmd": "cmd /c exit ([int]!(Test-Path ('$env:USERPROFILE/mercurial.ini') -Type Leaf))"
-    },
-    "Git": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Git",
-      "version": "2.20.1",
-      "platform": "x86_64",
-      "url": "https://github.com/git-for-windows/git/releases/download/v2.20.1.windows.1/Git-2.20.1-64-bit.exe",
-      "file_name": "from_url",
-      "install_cmd": "Set-Content -Path '$env:Temp/git.ini' -Value @\"`n[Setup]`nLang=default`nDir=\"$install_dir\\Git\"`nGroup=Git`nNoIcons=0`nSetupType=default`nComponents=ext,ext\\shellhere,ext\\guihere,gitlfs,assoc,assoc_sh`nTasks=`nEditorOption=Nano`nCustomEditorPath=`nPathOption=Cmd`nSSHOption=OpenSSH`nCURLOption=WinSSL`nCRLFOption=CRLFAlways`nBashTerminalOption=ConHost`nPerformanceTweaksFSCache=Enabled`nUseCredentialManager=Enabled`nEnableSymlinks=Disabled`n\"@ ; & \"$file_path\" /LOADINF=\"$env:Temp/git.ini\" /SILENT",
-      "uninstall_cmd": "Remove-Item -Path ('$env:Temp/git.ini') -Force 2>&1 | Out-Null ; & \"$install_dir\\Git\\unins000.exe\" /SILENT",
-      "test_cmd": "where.exe git"
-    },
-    "GitConfig": {
-      "depends_on": ["Git"],
-      "description": "Git config",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "git config --global user.name \"$user_name\" ; git config --global user.email \"$user_info\"",
-      "uninstall_cmd": "none",
-      "test_cmd": "cmd /c exit ([int]!(Test-Path ('$env:USERPROFILE/.gitconfig') -Type Leaf))"
-    },
-    "CmdScripts": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig", "Git"],
-      "description": "CMD scripts",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "install_cmd": "Set-EnvVar CMD_LIB \"$install_dir\\CmdScripts\\lib\" Machine ; git clone https://github.com/DmitrySokolov/cmd-scripts.git \"$install_dir\\CmdScripts\"",
-      "uninstall_cmd": "Remove-EnvVar CMD_LIB ; Remove-Item -Path \"$install_dir\\CmdScripts\" -Recurse -Force",
-      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar CMD_LIB isDir))"
-    },
-    "BuildTools2017": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig", "CmdScripts"],
-      "description": "Build Tools for VS 2017",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "https://download.visualstudio.microsoft.com/download/pr/02dffa51-7828-4905-9dd0-c012c0eca0f3/58cdff8a6914bf2df48cd598ce1c8dad/vs_buildtools.exe",
-      "file_name": "from_url",
-      "install_cmd": "& \"$file_path\" --passive --wait --norestart --nocache --add Microsoft.VisualStudio.Workload.MSBuildTools --add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Component.VC.CMake.Project --add Microsoft.VisualStudio.Component.VC.ATL --add Microsoft.VisualStudio.Component.VC.ATLMFC --add Microsoft.VisualStudio.Component.VC.CLI.Support --add Microsoft.VisualStudio.Component.VC.Modules.x86.x64 --add Microsoft.VisualStudio.Workload.ManagedDesktopBuildTools --add Microsoft.Net.Component.4.7.2.SDK --add Microsoft.Net.Component.4.7.TargetingPack",
-      "uninstall_cmd": "& \"$file_path\" uninstall --passive --wait --norestart --all",
-      "test_cmd": "cmd /c call \"$env:CMD_LIB\\..\\scripts\\findvc.cmd\""
-    },
-    "WinSDKComponents": {
-      "elevated": "true",
-      "depends_on": ["BuildTools2017"],
-      "description": "Windows SDK Components",
-      "version": "10.0.17763.132",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "vars": {
-        "name": "Windows Software Development Kit",
-        "arch": "x64",
-        "reg_key": "HKLM:\\SOFTWARE\\WOW6432Node\\Microsoft\\Windows Kits\\Installed Roots",
-        "reg_prop": "WindowsDebuggersRoot10"
-      },
-      "install_cmd": "& (Get-Package | ? Name -match '$($pkg.vars.name)' | ? Version -match '$version' ).Metadata['BundleCachePath'] /features OptionId.WindowsDesktopDebuggers /quiet /norestart /ceip off | Out-Default ; Set-EnvVar Path (Join-Path (Get-ItemPropertyValue '$($pkg.vars.reg_key)' -Name '$($pkg.vars.reg_prop)') '$($pkg.vars.arch)') Machine",
-      "uninstall_cmd": "Remove-EnvVar Path (Join-Path (Get-ItemPropertyValue '$($pkg.vars.reg_key)' -Name '$($pkg.vars.reg_prop)') '$($pkg.vars.arch)') Machine ; & (Get-Package | ? Name -match '$($pkg.vars.name)' | ? Version -match '$version' ).Metadata['BundleCachePath'] /uninstall /quiet /norestart",
-      "test_cmd": "cmd /c exit ([int]!((Get-Item \"$($pkg.vars.reg_key)\").Property -contains \"$($pkg.vars.reg_prop)\"))"
-    },
-    "DirectXSDK": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "DirectX",
-      "version": "9.29.1962",
-      "platform": "x86_64",
-      "url": "https://download.microsoft.com/download/A/E/7/AE743F1F-632B-4809-87A9-AA1BB3458E31/DXSDK_Jun10.exe",
-      "file_name": "from_url",
-      "vars": {
-        "dx_dir": "${env:ProgramFiles(x86)}\\Microsoft SDKs\\DirectX SDK (June 2010)",
-        "dx_key": "HKLM:SOFTWARE\\WOW6432Node\\Microsoft\\Windows\\CurrentVersion\\Uninstall\\Microsoft DirectX SDK (June 2010)"
-      },
-      "install_cmd": "& \"$file_path\" /P \"$($pkg.vars.dx_dir)\" /U | Out-Default ; Set-EnvVar DXSDK_DIR \"$($pkg.vars.dx_dir)\"",
-      "uninstall_cmd": "Remove-EnvVar DXSDK_DIR ; & (Get-ItemPropertyValue '$($pkg.vars.dx_key)' -Name 'UninstallString') /U",
-      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar DXSDK_DIR isDir))"
-    },
-    "AndroidSDK": {
-      "elevated": "true",
-      "depends_on": ["EnvConfig"],
-      "description": "Android SDK",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "https://dl.google.com/android/repository/sdk-tools-windows-4333796.zip",
-      "file_name": "from_url",
-      "vars": {
-        "sdk_dir": "Android\\Sdk",
-        "sdk_api": "android-28",
-        "sdk_build_tools": "28.0.3"
-      },
-      "install_cmd": "if (!(Test-Path \"$install_dir\\$($pkg.vars.sdk_dir)\\tools\" -Type Container)) { Expand-Archive -Path \"$file_path\" -DestinationPath \"$install_dir\\$($pkg.vars.sdk_dir)\" } ; Write-Output yes | & \"$install_dir\\$($pkg.vars.sdk_dir)\\tools\\bin\\sdkmanager\" \"build-tools;$($pkg.vars.sdk_build_tools)\" \"platform-tools\" \"platforms;$($pkg.vars.sdk_api)\" \"tools\" \"ndk-bundle\" --sdk_root=\"$install_dir\\$($pkg.vars.sdk_dir)\" | %{ if (`$_ -match '\\]\\s*(\\d+)%') {Write-Progress 'Installing Android SDK' -Status ('{0}% Complete:' -f `$Matches[1]) -PercentComplete `$Matches[1]} else {`$_} } -End{Write-Progress 'Installing Android SDK' -Completed}",
-      "uninstall_cmd": "& \"$install_dir\\$($pkg.vars.sdk_dir)\\tools\\bin\\sdkmanager\" --uninstall \"build-tools;$($pkg.vars.sdk_build_tools)\" \"platform-tools\" \"platforms;$($pkg.vars.sdk_api)\" \"ndk-bundle\" --sdk_root=\"$install_dir\\$($pkg.vars.sdk_dir)\" ; Remove-Item \"$install_dir\\$($pkg.vars.sdk_dir)\" -Recurse -Force",
-      "test_cmd": "cmd /c exit ([int]!(Test-EnvVar ANDROID_SDK_ROOT isDir))"
-    },
-    "AndroidSDKConfig": {
-      "elevated": "true",
-      "depends_on": ["AndroidSDK"],
-      "description": "Android SDK config",
-      "version": "none",
-      "platform": "x86_64",
-      "url": "none",
-      "file_name": "none",
-      "vars": {
-        "sdk_dir": "Android\\Sdk",
-        "sdk_api": "android-28",
-        "sdk_build_tools": "28.0.3",
-        "ndk_dir": "Android\\Sdk\\ndk-bundle"
-      },
-      "install_cmd": "Set-EnvVar ANDROID_SDK_ROOT \"$install_dir\\$($pkg.vars.sdk_dir)\" ; Set-EnvVar ANDROID_NDK_ROOT \"$install_dir\\$($pkg.vars.ndk_dir)\" ; Set-EnvVar ANDROID_NDK_HOST \"windows-$platform\" ; Set-EnvVar ANDROID_API_VERSION \"$($pkg.vars.sdk_api)\" ; Set-EnvVar ANDROID_BUILD_TOOLS_VERSION \"$($pkg.vars.sdk_build_tools)\"",
-      "uninstall_cmd": "Remove-EnvVar ANDROID_SDK_ROOT ; Remove-EnvVar ANDROID_NDK_ROOT ; Remove-EnvVar ANDROID_NDK_HOST ; Remove-EnvVar ANDROID_API_VERSION ; Remove-EnvVar ANDROID_BUILD_TOOLS_VERSION",
-      "test_cmd": "cmd /c exit ([int]!((Test-EnvVar ANDROID_SDK_ROOT isDir) -and (Test-EnvVar ANDROID_NDK_ROOT isDir) -and (Test-EnvVar ANDROID_NDK_HOST match '\\w+') -and (Test-EnvVar ANDROID_API_VERSION match '\\w+') -and (Test-EnvVar ANDROID_BUILD_TOOLS_VERSION match '\\w+')))"
+    "user_info": "Build Bot <build.bot@example.org>",
+    "kits": {
+        "default": ["JDK__1.8.0.201-1", "kit:config"],
+        "config": ["Env_config__1.0"]
     }
-  }
 }
