Added '-SourceInstallDir' option and '$source_install_dir' variable. Fixed '-Credential' option, added '-EnterPassword' option instead of '-Credential:$null'. Fixed Android SDK and NDK packages. Added packages CMake 3.18.2, TortoiseHg 5.5.1, Qt Creator 4.13.1.

--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
         "so this will add all packages contained in the referenced kit"
     ],
     "install_dir": "C:\\Dev\\Tools",
+    "source_install_dir": "C:\\Dev\\Projects",
     "packages_dir": "$config_dir\\packages",
     "cache_dir": "$config_dir\\cache",
     "user_name": "build.bot",
